# kicad-agent

./: -  .gitignore  .swiftlint.yml  28926V5XR8.certSigningRequest  AGENTS.md  CLAUDE.md  COUNCIL-REVIEW.md  Gemfile  KNOWN_LIMITATIONS.md  LICENSE  PHASE-101-COMPLETION-REPORT.md  README.md  REVIEW.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-eval.txt  test_meta_statistics.rpt
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: CLAUDE.md  settings.local.json
.codex/: config.toml
.planning/: CICADA-PHASE-HANDOFF.md  COUNCIL-PLAN-REVIEW.md  FOLLOWUP-VERIFICATION.md  PROJECT.md  REQUIREMENTS.md  ROADMAP-v10.md  ROADMAP-v11.md  ROADMAP.md  STATE.md  STRATEGIC-EXPANSION-PLAN.md  TOOL-GAPS-CHANNEL-STRIP.md  config.json
BUGS/: P0-001-update-symbols-from-library-crash.md  P0-002-place-missing-units-collides-positions.md  P0-003-erc-auto-fix-corrupts-files.md  P0-004-place-no-connects-from-erc-wrong-positions.md  P0-005-remove-dangling-wires-criteria-mismatch.md  P0-006-annotate-corrupts-files.md  README.md
benchmarks/: adversarial-v1.json  circuit-qa-v1.json  pcb-mmlu-v1.json
data/: part-mappings.yaml
docs/: APP-STORE-DESCRIPTION.md  COUNCIL-OF-RICKS-REVIEW.md  ENGINEERING-DESCRIPTION.md  EVAL-HARNESS.md  FEATURE-007-intelligent-auto-route.md  FEATURE-008-safe-annotate.md  FEATURE-INVENTORY.md  GAP-ANALYSIS-CURRENT.md  GAP-ANALYSIS-TRIAGE-2026-07-15.md  GAP_ANALYSIS.md  KICAD-AGENT-HANDOFF.md  PHASE106_VAST_RUN.md  PRODUCT_DESCRIPTION.md  cli.md  deterministic-checks-vs-ai-suggestions.md  gerbview_reference.md  getting-started.md  index.md  kicad_agent_reference.md  kicad_docs.md  not-manufacturable-until.md  pcb_editor_reference.md
fastlane/: Appfile  Fastfile  Matchfile  Pluginfile  README.md  report.xml
macos-app/: .gitignore  APP_STORE_REVIEW_NOTES.md  Package.swift  README.md  project.yml  run-ki-cad-agent.sh  run-volta.sh
plans/: FEATURE-contextual-placement-constraints.md  routing-overhaul-phases-103-106.md  stage-safe-pcb-flow-upgrade.md
scripts/: add_schematic_spatial.py  batch_erc_comparison.py  benchmark_gemma_baseline.py  build_phase106_dataset.py  ci_coverage_gate.py  clone_targets.py  collect_easyeda.py  collect_gold_standard.py  collect_schematics.py  collect_training_data.py  convert_maze_vision.py  convert_peft_to_mlx.py  demo_closed_box.py  evaluate_gemma_adapter.py  evaluate_models.py  extract_pdf_textbook.py  fetch_100k.py  fetch_gemma_vision_adapter.sh  generate_555_fixture.py  generate_diagnostic_training_data.py  generate_gap_training_data.py  generate_grpo_variations.py  harvest_diagnostic_sft_data.py  ingest_cognee.py  merge_vision_datasets.py  phase106_eval.py  (+32 more)
(+2660 files in other folders)
