[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-agent"
version = "0.1.0"
description = "AI-safe structural editing of KiCad schematic, PCB, symbol, and footprint files"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Electronic Design Automation (EDA)",
]
dependencies = [
    "kiutils>=1.4.8",
    "sexpdata>=1.0.0",
    "spicelib>=1.5.1",
    "networkx>=3.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "PyGithub>=2.9.1",
    "shapely>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.7",
    "ruff>=0.13",
]
llm = [
    "anthropic>=0.61.0",
]
local = [
    "mlx-lm>=0.20",
    "huggingface_hub>=0.20",
]
mcp = [
    "mcp>=1.0.0",
]
training = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.10",
    "datasets",
    "accelerate",
]
docs = [
    "mkdocs-material>=9.7",
    "mkdocstrings-python>=2.0",
]

[project.scripts]
kicad-agent = "kicad_agent.cli:main"
kicad-component-search = "kicad_agent.mcp.server:main"
kicad-agent-edit = "kicad_agent.mcp.edit_server:main"

[project.urls]
Homepage = "https://github.com/bretbouchard/kicad-agent"
Documentation = "https://bretbouchard.github.io/kicad-agent"
Repository = "https://github.com/bretbouchard/kicad-agent"
Issues = "https://github.com/bretbouchard/kicad-agent/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external tools (kicad-cli, Freerouting)",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["kiutils.*", "sexpdata.*", "networkx.*", "shapely.*", "mcp.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["kicad_agent"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
